--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 	},
 	"require-dev": {
 		"pestphp/pest": "^4.1",
-		"mockery/mockery": "^1.6"
+		"mockery/mockery": "^1.6",
+		"brain/monkey": "^2.6"
 	},
 	"config": {
 		"allow-plugins": {
