--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 	"require-dev": {
 		"pestphp/pest": "^4.1",
 		"mockery/mockery": "^1.6",
-		"brain/monkey": "^2.6"
+		"brain/monkey": "^2.6",
+		"wp-cli/wp-cli": "^2.12"
 	},
 	"config": {
 		"allow-plugins": {
