--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"knplabs/github-api": "^3.1",
 		"symfony/http-client": "^7.3",
 		"nyholm/psr7": "^1.8",
-		"woocommerce/action-scheduler": "^3.9"
+		"woocommerce/action-scheduler": "^3.9",
+		"symfony/polyfill-mbstring": "^1.33"
 	},
 	"require-dev": {
 		"pestphp/pest": "^4.1",
