Checking in progress

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 		"symfony/http-client": "^7.3",
 		"nyholm/psr7": "^1.8",
 		"woocommerce/action-scheduler": "^3.9",
-		"symfony/polyfill-mbstring": "^1.33"
+		"symfony/polyfill-mbstring": "^1.33",
+		"firebase/php-jwt": "^6.11"
 	},
 	"require-dev": {
 		"pestphp/pest": "^4.1",
