Patching build process

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,169 +1,150 @@
-# A descriptive name for your workflow
 name: Build and Release Plugin
 
-# --- TRIGGER ---
-# This workflow is triggered when a commit is pushed or merged into the 'main' branch.
 on:
   push:
     branches:
-      - main # You can change this to 'development' if you prefer
+      - main
+      - master
+      - develop
+      - 'release/*'
+  workflow_dispatch: {}
 
-# --- CONCURRENCY ---
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
-# --- JOB DEFINITION ---
 jobs:
+  #====================================================
+  # JOB: Build, Tag, and Release
+  # This job handles the packaging and GitHub Release creation.
+  #====================================================
   build_and_release:
     name: Build and Release Plugin
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Required to create tags and releases.
+      contents: write # Required to create tags and releases
+
+    env:
+      PLUGIN_SLUG: "${{ vars.PLUGIN_SLUG }}"
+      MAIN_BRANCH: "${{ vars.MAIN_BRANCH }}"
+      MAIN_PLUGIN_FILE: "${{ vars.MAIN_PLUGIN_FILE }}" # e.g., 'my-plugin.php'
+      PHP_VERSION: "${{ vars.PHP_VERSION }}"
 
     steps:
-      # Step 1: Check out the repository's code.
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Step 2: Get the plugin version and slug from the main plugin file.
-      - name: Get Plugin Info from Main File
-        id: plugin_info
+      - name: "Debug: Print Plugin File Content"
+        id: debug_plugin_file
         run: |
-          PLUGIN_FILE="wp2-update.php"
-          VERSION=$(grep -i '^\s\*\sVersion:' "$PLUGIN_FILE" | awk -F': ' '{print $2}' | tr -d '[:space:]')
-          PLUGIN_SLUG=$(grep -i '^\s\*\sText Domain:' "$PLUGIN_FILE" | awk -F': ' '{print $2}' | tr -d '[:space:]')
-          
-          if [ -z "$VERSION" ]; then
-            echo "❌ Could not find 'Version:' in $PLUGIN_FILE. Exiting."
+          if [ -f "${{ env.MAIN_PLUGIN_FILE }}" ]; then
+            echo "Contents of ${{ env.MAIN_PLUGIN_FILE }}:"
+            cat "${{ env.MAIN_PLUGIN_FILE }}"
+          else
+            echo "File ${{ env.MAIN_PLUGIN_FILE }} does not exist."
+          fi
+
+      - name: Get Version from Plugin File
+        id: version
+        run: |
+          if [ ! -f "${{ env.MAIN_PLUGIN_FILE }}" ]; then
+            echo "Error: File not found at path ${{ env.MAIN_PLUGIN_FILE }}."
             exit 1
           fi
 
-          echo "Found Version: ${VERSION}"
-          echo "Plugin Slug: ${PLUGIN_SLUG}"
-          
+          VERSION=$(grep -i '^ Version:' "${{ env.MAIN_PLUGIN_FILE }}" | awk -F': ' '{print $2}' | tr -d '[:space:]')
+          if [ -z "$VERSION" ]; then
+            echo "Error: Version could not be determined from ${{ env.MAIN_PLUGIN_FILE }}."
+            echo "Ensure the file contains a 'Version:' field in the plugin header."
+            exit 1
+          fi
           echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
-          echo "slug=${PLUGIN_SLUG}" >> "$GITHUB_OUTPUT"
 
-      # Step 3: Check if a release for this version already exists.
+      - name: Prepare Release Variables
+        id: prep
+        run: |
+          BASE_VERSION="${{ steps.version.outputs.version }}"
+          BRANCH_NAME="${{ github.ref_name }}"
+          
+          if [[ "$BRANCH_NAME" == "${{ env.MAIN_BRANCH }}" ]]; then
+            echo "IS_PRERELEASE=false" >> "$GITHUB_OUTPUT"
+            echo "RELEASE_TAG=v${BASE_VERSION}" >> "$GITHUB_OUTPUT"
+            echo "RELEASE_NAME=Release ${BASE_VERSION}" >> "$GITHUB_OUTPUT"
+          else
+            SUFFIX=$(echo "$BRANCH_NAME" | tr ' /' '--')
+            echo "IS_PRERELEASE=true" >> "$GITHUB_OUTPUT"
+            echo "RELEASE_TAG=v${BASE_VERSION}-${SUFFIX}" >> "$GITHUB_OUTPUT"
+            echo "RELEASE_NAME=Pre-release ${BASE_VERSION} (${BRANCH_NAME})" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Check if Release Already Exists
         id: check_release
         run: |
-          if gh release view v${{ steps.plugin_info.outputs.version }} >/dev/null 2>&1; then
-            echo "✅ Release v${{ steps.plugin_info.outputs.version }} already exists. No new release needed."
+          if gh release view ${{ steps.prep.outputs.RELEASE_TAG }} >/dev/null 2>&1; then
+            echo "Release ${{ steps.prep.outputs.RELEASE_TAG }} already exists."
             echo "exists=true" >> "$GITHUB_OUTPUT"
           else
-            echo "🚀 Release v${{ steps.plugin_info.outputs.version }} does not exist. Proceeding with build."
+            echo "Release ${{ steps.prep.outputs.RELEASE_TAG }} does not exist. Proceeding."
             echo "exists=false" >> "$GITHUB_OUTPUT"
           fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 4: Set up PHP and Composer
       - name: Set up PHP
         if: steps.check_release.outputs.exists == 'false'
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2' # Updated to meet firebase/php-jwt requirements
-          tools: composer
+          php-version: ${{ env.PHP_VERSION }}
 
-      # Step 5: Set up Node.js
-      - name: Set up Node.js
-        if: steps.check_release.outputs.exists == 'false'
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22' # Updated to a compatible version
-          cache: 'npm'
-
-      # Step 6: Cache and Install Composer Dependencies
-      - name: Cache Composer dependencies
-        if: steps.check_release.outputs.exists == 'false'
-        uses: actions/cache@v4
-        with:
-          path: vendor
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
-
-      # Step 7: Install Composer Dependencies
-      - name: Install Composer Dependencies
-        if: steps.check_release.outputs.exists == 'false'
-        run: composer install --no-dev --prefer-dist --optimize-autoloader
-
-      # Step 8: Install Node.js Dependencies
-      - name: Install Node.js Dependencies
-        if: steps.check_release.outputs.exists == 'false'
-        run: npm install
-
-      # Step 9: Build Vite Assets for Production 🚀
-      - name: Build Vite Assets
-        if: steps.check_release.outputs.exists == 'false'
-        run: npm run build
-
-      # Step 10: Build the Production-Ready Plugin ZIP (Now includes Vite assets)
-      - name: Build Production-Ready Plugin ZIP
-        if: steps.check_release.outputs.exists == 'false'
-        id: build_zip
-        run: |
-          PLUGIN_SLUG="${{ steps.plugin_info.outputs.slug }}"
-          # This rsync command now correctly includes the newly built Vite assets
-          rsync -rc --exclude-from='.distignore' . "$PLUGIN_SLUG/"
-          zip -r "${PLUGIN_SLUG}.zip" "$PLUGIN_SLUG"
-          mkdir -p build
-          mv "${PLUGIN_SLUG}.zip" "build/"
-          rm -rf "$PLUGIN_SLUG"
-          echo "zip_path=build/${PLUGIN_SLUG}.zip" >> "$GITHUB_OUTPUT"
-
-      # Step 11: Create the 'update.json' file.
-      - name: Create Update JSON File
+      - name: Cache and Install Composer Dependencies
         if: steps.check_release.outputs.exists == 'false'
         run: |
-          VERSION="${{ steps.plugin_info.outputs.version }}"
-          SLUG="${{ steps.plugin_info.outputs.slug }}"
-          ZIP_PATH="${{ steps.build_zip.outputs.zip_path }}"
-          PACKAGE_NAME=$(basename "$ZIP_PATH")
-          DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/v${VERSION}/${PACKAGE_NAME}"
+          if [ -f composer.json ]; then
+            composer install --no-dev --prefer-dist --no-progress
+          else
+            echo "composer.json not found, skipping dependency installation."
+          fi
 
+      - name: Build Plugin Package
+        if: steps.check_release.outputs.exists == 'false'
+        id: package
+        run: |
+          PACKAGE_NAME="${{ env.PLUGIN_SLUG }}.zip"
+          STAGING_DIR="staging"
+          mkdir -p "${STAGING_DIR}"
+          rsync -av --checksum . "${STAGING_DIR}/" --exclude=".git" --exclude=".github" --exclude="node_modules" --exclude="${STAGING_DIR}" --exclude=".gitignore" --exclude="README.md" --exclude="*.zip"
+          cd "${STAGING_DIR}"
+          zip -r "../${PACKAGE_NAME}" .
+          cd ..
+          echo "PACKAGE_PATH=${PACKAGE_NAME}" >> "$GITHUB_OUTPUT"
+
+      - name: Compute ZIP checksum and size
+        if: steps.check_release.outputs.exists == 'false'
+        id: zipmeta
+        run: |
+          ZIP_PATH="${{ steps.package.outputs.PACKAGE_PATH }}"
+          CHECKSUM=$(sha256sum "$ZIP_PATH" | awk '{print $1}')
+          SIZE=$(stat -c %s "$ZIP_PATH")
+          echo "checksum=$CHECKSUM" >> "$GITHUB_OUTPUT"
+          echo "size=$SIZE" >> "$GITHUB_OUTPUT"
+
+      - name: Create Update JSON
+        if: steps.check_release.outputs.exists == 'false'
+        run: |
+          DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${{ steps.prep.outputs.RELEASE_TAG }}/${{ steps.package.outputs.PACKAGE_PATH }}"
           jq -n \
-            --arg name "${{ github.repository_owner }}/${SLUG}" \
-            --arg slug "$SLUG" \
-            --arg version "$VERSION" \
-            --arg download_url "$DOWNLOAD_URL" \
-            --arg tested "6.6" \
-            --arg last_updated "$(date -u +"%Y-%m-%d %H:%M:%S")" \
-            '{
-              name: $name,
-              slug: $slug,
-              version: $version,
-              download_url: $download_url,
-              tested: $tested,
-              last_updated: $last_updated
-            }' > build/update.json
+            --arg new_version "${{ steps.version.outputs.version }}" \
+            --arg slug "${{ env.PLUGIN_SLUG }}" \
+            --arg package "$DOWNLOAD_URL" \
+            '{ "new_version": $new_version, "slug": $slug, "package": $package }' > update.json
 
-      # ⭐️ NEW STEP: Verify that our build files exist before trying to release them.
-      - name: Verify Build Assets
-        if: steps.check_release.outputs.exists == 'false'
-        run: |
-          echo "Listing files in the build directory:"
-          ls -R build
-
-      # Step 8: Create the Git tag for the new version.
-      - name: Create and Push Git Tag
-        if: steps.check_release.outputs.exists == 'false'
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag v${{ steps.plugin_info.outputs.version }}
-          git push origin v${{ steps.plugin_info.outputs.version }}
-
-      # Step 9: Create the GitHub Release and upload the assets.
-      - name: Create GitHub Release and Upload Assets
+      - name: Create GitHub Release
         if: steps.check_release.outputs.exists == 'false'
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.plugin_info.outputs.version }}
-          name: Release ${{ steps.plugin_info.outputs.version }}
-          # The paths here MUST match the output from the "Verify Build Assets" step
+          tag_name: ${{ steps.prep.outputs.RELEASE_TAG }}
+          name: ${{ steps.prep.outputs.RELEASE_NAME }}
+          prerelease: ${{ steps.prep.outputs.IS_PRERELEASE }}
           files: |
-            ${{ steps.build_zip.outputs.zip_path }}
-            build/update.json
+            ${{ steps.package.outputs.PACKAGE_PATH }}
+            update.json
