--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - main
-      - master
-      - develop
+      - development
       - 'release/*'
   workflow_dispatch: {}
 
@@ -52,12 +51,15 @@ jobs:
             exit 1
           fi
 
-          VERSION=$(grep -i '^ Version:' "${{ env.MAIN_PLUGIN_FILE }}" | awk -F': ' '{print $2}' | tr -d '[:space:]')
+          # Extract version using a flexible regex
+          VERSION=$(grep -iE '^\s*Version:\s*' "${{ env.MAIN_PLUGIN_FILE }}" | sed -E 's/^\s*Version:\s*//I' | tr -d '[:space:]')
+
           if [ -z "$VERSION" ]; then
             echo "Error: Version could not be determined from ${{ env.MAIN_PLUGIN_FILE }}."
             echo "Ensure the file contains a 'Version:' field in the plugin header."
             exit 1
           fi
+
           echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
 
       - name: Prepare Release Variables
