--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -55,6 +55,9 @@ jobs:
           echo "Debug: Printing the content of ${{ env.MAIN_PLUGIN_FILE }}"
           cat "${{ env.MAIN_PLUGIN_FILE }}"
 
+          # Normalize line endings to Unix-style
+          sed -i 's/\r$//' "${{ env.MAIN_PLUGIN_FILE }}"
+
           # Extract version using a flexible regex
           VERSION=$(grep -iE '^\s*Version:\s*' "${{ env.MAIN_PLUGIN_FILE }}" | sed -E 's/^\s*Version:\s*//I')
 
