--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 		}
 	],
 	"require": {
+		"php": "^8.2",
 		"knplabs/github-api": "^3.1",
 		"symfony/http-client": "^7.3",
 		"nyholm/psr7": "^1.8",
