--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 		"nyholm/psr7": "^1.8",
 		"woocommerce/action-scheduler": "^3.9",
 		"symfony/polyfill-mbstring": "^1.33",
-		"firebase/php-jwt": "^6.11"
+		"firebase/php-jwt": "^6.11",
+		"nunomaduro/termwind": "^2.3.1"
 	},
 	"require-dev": {
 		"pestphp/pest": "^4.1",
