--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -125,6 +125,11 @@ jobs:
             echo "composer.json not found, skipping dependency installation."
           fi
 
+      - name: Build Assets
+        if: steps.check_release.outputs.exists == 'false'
+        run: |
+          npx vite build
+
       - name: Build Plugin Package
         if: steps.check_release.outputs.exists == 'false'
         id: package
