--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.5",
+    "lodash": "^4.17.21",
     "nanostores": "^0.10.3",
     "tabbyjs": "^12.0.3",
     "toastify-js": "^1.12.0"
