--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
 		"nyholm/psr7": "^1.8",
 		"woocommerce/action-scheduler": "^3.9",
 		"symfony/polyfill-mbstring": "^1.33",
-		"firebase/php-jwt": "^6.11",
-		"nunomaduro/termwind": "^2.3.1"
+		"firebase/php-jwt": "^6.11"
 	},
 	"require-dev": {
 		"pestphp/pest": "^4.1",
@@ -37,9 +36,6 @@
 		}
 	},
 	"scripts": {
-		"build": [
-			"@composer install --no-dev --optimize-autoloader",
-			"@composer dump-autoload --optimize --no-dev"
-		]
+		"build": "composer install --no-dev && npm run build"
 	}
 }
