--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "vite-plugin-sass-dts": "^1.3.31"
   },
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "start": "vite"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.5",
