--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
 			"WP2\\Update\\": "src/"
 		}
 	},
+	"autoload-dev": {
+		"psr-4": {
+			"Tests\\": "tests/"
+		}
+	},
 	"authors": [
 		{
 			"name": "Vinny S. Green",
@@ -28,7 +33,9 @@
 		"brain/monkey": "^2.6",
 		"wp-cli/wp-cli": "^2.12",
 		"squizlabs/php_codesniffer": "^3.7.2",
-		"wp-coding-standards/wpcs": "^3.2"
+		"wp-coding-standards/wpcs": "^3.2",
+		"phpstan/phpstan": "^1.12",
+		"phpunit/phpunit": "^12.0"
 	},
 	"config": {
 		"allow-plugins": {
@@ -39,6 +46,7 @@
 	},
 	"scripts": {
 		"build": "composer install --no-dev && npm install && npm run build",
-		"lint": "vendor/bin/phpcs --standard=WordPress ."
+		"lint": "vendor/bin/phpcs --standard=WordPress .",
+		"stan": "vendor/bin/phpstan analyse --configuration=phpstan.neon.dist --no-progress"
 	}
 }
