--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@open-wc/testing": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.37.0",
     "eslint-plugin-lit": "^2.1.1",
@@ -9,6 +10,7 @@
     "prettier": "^3.6.2",
     "rtlcss": "^4.3.0",
     "sass": "^1.93.2",
+    "sinon": "^17.0.1",
     "vite": "^7.1.9",
     "vite-plugin-babel": "^1.3.2",
     "vite-plugin-sass-dts": "^1.3.31"
@@ -25,17 +27,19 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.5",
+    "@lit/context": "^1.1.6",
     "@nanostores/lit": "^0.2.3",
     "@popperjs/core": "^2.11.8",
+    "@wordpress/api-fetch": "^5.0.0",
     "bootstrap": "^5.3.8",
     "lit": "^3.3.1",
+    "lit-element-router": "^2.0.3",
     "lodash": "^4.17.21",
     "nanostores": "^0.10.3",
     "semver": "^7.7.3",
     "tabbyjs": "^12.0.3",
     "toastify-js": "^1.12.0",
-    "uuid": "^13.0.0",
-    "@wordpress/api-fetch": "^5.0.0"
+    "uuid": "^13.0.0"
   },
   "type": "module"
 }
